fixing layout issues

--- a/app/styles/main-foundation.css
+++ b/app/styles/main-foundation.css
@@ -1,3 +1,29 @@
+html,
+body {
+  margin:0;
+  padding:0;
+  height:100%;
+}
+#main {
+  min-height:100%;
+  position:relative;
+}
+/*.header {
+  padding:10px;
+  background:#5ee;
+}*/
+.container {
+padding-bottom: 30px;
+padding-top: 45px; 
+}
+.footer {
+  width:100%;
+  height:30px;
+  position:absolute;
+  bottom:0;
+  left:0;
+  /*background:#ee5;*/
+}
 
 /*.navigator_open{
 left: 12% !important;
@@ -107,9 +133,9 @@ footer{
   color: rgba(0, 0, 0, 0.5) !important; 
 }
 .sub-header{
-	background-color: transparent !important; 
+	/*background-color: transparent !important; */
 	width: 100%; 
-	top: 45px !important; 
+	/*top: 45px !important; */
 	/*height: 30px !important;*/
 	position:fixed !important;
 	/*z-index: 1 !important; */
@@ -1013,9 +1039,9 @@ label{
 	display: inline-block !important;
 }
 
-.top-bar{
+/*.top-bar{
 	z-index: 10;
-}
+}*/
 
 .top-bar input[type="checkbox"]{
   top:0;
